--- a/frontend/src/components/Footer/Footer.module.scss
+++ b/frontend/src/components/Footer/Footer.module.scss
@@ -45,6 +45,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 4px;
+  background-color: var(--color-background);
 
   svg {
     margin: 8px 20px;
