--- a/frontend/src/components/Table/Table.module.scss
+++ b/frontend/src/components/Table/Table.module.scss
@@ -4,6 +4,7 @@
   color: #FFF;
   font-size: 12px;
   font-weight: 500;
+  margin-bottom: 100px;
 
   > thead {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
