--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,33 +8,38 @@
 :root {
   --main-font: 'Inter', sans-serif;
   --color-background: #2E2E2E;
-  --color-background-modal: #171717;
+  --color-background-modal: #292929;
+  --color-background-input: #242424;
+  --color-border-input: #555;
+  --color-border-input-focus: #bebebe;
   --color-text: #F0F0F0;
+  --color-input-label: #aaa;
   --color-loss: #D50E24;
   --color-no-changes: #9E9E9E;
   --color-profit: #00BA00;
-  --container-padding: 30px;
 }
 
-html {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-*, *:after, *:before {
-  box-sizing: inherit;
+html {
+  font-family: var(--main-font);
+  background-color: var(--color-background);
+  color: var(--color-text);
+  margin: 0;
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  margin: 0;
   // min-height: 100vh;
-  background-color: var(--color-background);
-  color: var(--color-text);
 }
 
 img, svg {
   display: block;
   max-width: 100%;
-  max-height: 100%;
   height: auto;
 }
 
@@ -61,9 +66,9 @@ h1, h2, h3, p, figure, fieldset {
 }
 
 #root {
-  // height: 100vh;
   display: flex;
   flex-direction: column;
+  // height: 100vh;
 }
 
 footer {
@@ -79,7 +84,18 @@ footer {
 .container {
   max-width: 1440px;
   width: 100%;
-  padding: 0 var(--container-padding);
+  padding: 0 30px;
   margin: 0 auto;
   flex: 1 0 auto;
+}
+
+
+.profit {
+  color: var(--color-profit);
+}
+.loss {
+  color: var(--color-loss);
+}
+.neutral {
+  color: var(--color-no-changes);
 }
